project_sources/collector/fixtures/powershell_analysis/good/custom_analyzer_skip_fails_closed.ps1
$Result = [pscustomobject]@{ analyzed = $false; validation = "FAIL"; reason = "inventory missing" }
throw "Analyzer skipped: $($Result.reason)"
