project_sources/collector/fixtures/powershell_analysis/bad/analyzer_skip_success.ps1
$AnalyzerResult = @{ analyzed = $false; skipped_reason = "missing policy"; validation = "success" }
Write-Output ($AnalyzerResult | ConvertTo-Json)
